[ESME-316] An attempt to fix the problem where the login button now gets cut off in IE. Can someone please test in IE8?
git-svn-id: https://svn.apache.org/repos/asf/esme/trunk/server@1067460 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -240,7 +240,8 @@ label {
 	float:right;	
 }             
 .login-btn {
-  margin-top:10px;
+  margin-top:10px; 
+  height:50px;
 }   
 
 .share-select {  
